# mod_mobilega

./: Makefile.am  autogen.sh  configure.in  mod_mobilega.c
