AC_INIT([lighttpd-mod-groonga], [0.1.0], [a@razil.jp])
AM_INIT_AUTOMAKE(AC_PACKAGE_NAME, AC_PACKAGE_VERSION)

AM_PROG_LIBTOOL
AC_PROG_CC
AC_PROG_INSTALL

LIGHTTPD_INCLUDES=

AC_ARG_WITH(lighttpd-src,
  [  --with-lighttpd-src=[DIR]	Specify lighttpd source path], [
    LIGHTTPD_SRC="$withval"
    LIGHTTPD_INCLUDES="-I$LIGHTTPD_SRC -I${LIGHTTPD_SRC}/src"
  ], [
    AC_MSG_ERROR("no source path specified")
  ]
)

AC_ARG_WITH(lighttpd-plugin,
  [  --with-lighttpd-plugin=[DIR]	Specify lighttpd plugin path], [
    LIGHTTPD_PLUGIN="$withval"
    AC_SUBST(LIGHTTPD_PLUGIN)
  ], [
    AC_MSG_ERROR("no plugin path specified")
  ]
)

AC_HEADER_STDC
AC_CHECK_HEADERS([ctype.h stdlib.h string.h stdbool.h stdint.h])
AC_CHECK_HEADERS([openssl/sha.h]) # sha1
AC_CHECK_HEADERS([groonga/groonga.h]) # groonga
AC_CHECK_HEADERS([zlib.h]) # zlib
#AC_CHECK_HEADERS([memcached.h]) # libmemcached

AC_CHECK_LIB(z, compress, [ZLIB_LIBS="-lz"], [AC_MSG_ERROR("No zlib found")])
AC_CHECK_LIB(groonga, grn_init, [
  GROONGA_INCLUDES="`pkg-config --cflags-only-I groonga`"
  GROONGA_LIBS="`pkg-config --libs groonga`"
],[
  AC_MSG_ERROR("No libgroonga found")])

AC_C_CONST
AC_C_INLINE
AC_C_CHAR_UNSIGNED
AC_TYPE_OFF_T
AC_TYPE_PID_T
AC_TYPE_SIZE_T

AC_CHECK_MEMBER(struct tm.tm_gmtoff,[AC_DEFINE([HAVE_STRUCT_TM_GMTOFF],[1],[gmtoff in struct tm])],,[#include <time.h>])
AC_CHECK_TYPES(struct sockaddr_storage,,,[#include <sys/socket.h>])
AC_CHECK_TYPES(socklen_t,,,[#include <sys/types.h>
#include <sys/socket.h>])

AC_SYS_LARGEFILE

AC_CHECK_SIZEOF(long)
AC_CHECK_SIZEOF(off_t)

AC_CHECK_FUNCS([malloc])
AC_CHECK_FUNCS([realloc])
AC_CHECK_FUNCS([memset])

CFLAGS="${CFLAGS} ${LIGHTTPD_INCLUDES} ${GROONGA_INCLUDES} ${LIBXML2_CFLAGS}"
LIBS="${LIBS} ${SSL_LIBS} ${GROONGA_LIBS} ${LIBXML2_LIBS} ${PTHREAD_LIBS} ${ZLIB_LIBS}"

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
